# lispish

./: Cargo.toml  TODO.md  rebuild_all.sh  rust-toolchain
.github/workflows/: ci-checkin.yaml
core/src/data/: mod.rs
core/src/web/: mod.rs  style.css
lispish/: Cargo.toml
lispish-store/src/: bitset.rs  lib.rs  objects.rs  render.rs  tag.rs  vectors.rs
lispish/src/data/: bitset.rs
lispish/src/eval/: builtins.rs  stdlib_test.rs
lispish/src/reader/: mod.rs
reader/: Cargo.toml
reader/src/: lib.rs  location.rs  tokens.rs
src/: lib.rs  main.rs  reader.rs  render.rs  tokens.rs
src/data/: bitset.rs  mod.rs  objects.rs  render.rs
src/eval/: builtins.rs  mod.rs  render_eval.rs  stdlib.scm  stdlib_test.rs
src/reader/: mod.rs  parse.rs  token.rs
src/web/: app.js  mod.rs  style.css
store/: Cargo.toml
store/src/: arena.rs  bitset.rs  lib.rs  objects.rs  render.rs  strings.rs  symbols.rs  tag.rs  utility.rs  vectors.rs
store/src/arena/: dynamic_data.rs  gc.rs  mod.rs  static_arenas.rs  static_cell.rs  static_data.rs
store/src/gc/: doc.md  mod.rs
testdata/: ex1.lisp
