[package]
name = "lispish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot-writer = { version = "0.1.3", optional = true }
maud = { version = "0.26.0", optional = true }
regex = "1.10.4"
string-interner = "0.15.0"
tracing = "0.1.40"

[features]
render = ["maud", "dot-writer"]
default = ["render"]

[[bin]]
name = "render_expression"
required-features = ["render"]