[package]
name = "lispish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", optional = true }
dot-writer = { version = "0.1.3", optional = true }
maud = { version = "0.26.0", optional = true }
regex = "1.10.4"
string-interner = "0.15.0"
tokio = { version = "1.37.0", optional = true }
tracing = "0.1.40"

[features]
render = ["dep:maud", "dep:dot-writer"]
web = ["render"]
default = []
tokio = ["dep:tokio"]
axum = ["dep:axum"]
all = ["render", "web"]

[[bin]]
name = "render_expression"
required-features = ["render"]

[[bin]]
name = "web"
required-features = ["render", "web"]
